# finalproject_Andreenko_Andrey_dpo_v2

./: .gitignore  Makefile  README.md  demo.cast  pyproject.toml
data/: portfolios.json  rates.json  users.json
valutatrade_hub/: decorators.py  logging_config.py
valutatrade_hub/cli/: interface.py
valutatrade_hub/core/: currencies.py  exceptions.py  models.py  usecases.py
valutatrade_hub/infra/: settings.py
valutatrade_hub/parser_service/: api_clients.py  config.py  storage.py  updater.py
