[tool.poetry]
name = "finalproject_Andreenko_Andrey_dpo_v2"
version = "0.1.0"
description = "Project simulating currency wallet"
authors = ["Your Name <youremail@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
prettytable = "^3.0"
ruff = "^0.0.243"  # или последняя версия, проверь на PyPI

[tool.poetry.dev-dependencies]

[tool.valutatrade]
# базовый каталог данных
DATA_DIR = "data"

# файлы хранения данных
USERS_FILE = "users.json"
PORTFOLIOS_FILE = "portfolios.json"
CURRENT_USER_FILE = "current_user.json"
RATES_FILE = "rates.json"

# политика свежести курсов
RATES_TTL_SECONDS = 300

# бизнес-настройки
DEFAULT_BASE_CURRENCY = "USD"

# логирование (задел под 3.4)
LOG_DIR = "logs"
LOG_LEVEL = "INFO"
LOG_FORMAT = "plain"

