[tool.poetry]
name = "finalproject_Andreenko_Andrey_dpo_v2"
version = "0.1.0"
description = "Project simulating currency wallet"
authors = ["Your Name <youremail@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
prettytable = "^3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.243"

[tool.poetry.scripts]
project = "valutatrade_hub.cli.interface:main"

[tool.valutatrade]
DATA_DIR = "data"

USERS_FILE = "users.json"
PORTFOLIOS_FILE = "portfolios.json"
CURRENT_USER_FILE = "current_user.json"
RATES_FILE = "rates.json"

RATES_TTL_SECONDS = 300
DEFAULT_BASE_CURRENCY = "USD"

LOG_DIR = "logs"
LOG_LEVEL = "INFO"
LOG_FORMAT = "plain"

